--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -2,5 +2,12 @@
 
 \renewcommand\abstractname{Acknowledgements}
 \begin{abstract}
+	\paragraph{} I would like to thank my supervisor Dr. Philipp Jovanovic for his invaluable advice and guidance throughout this project. His active participation has continuously helped advance our research towards novel and exciting avenues. I would also like to mention the academic and administrative staff at UCL who have made this learning experience as enriching and enjoyable as could be. I thank my friends; those whom I have known for long and those with whom I have grown close during these studies. A quick mention for the existence of video conferencing software that allowed this project to take place in these particular times.
 	
+	\paragraph{} Finally I thank my family, and in particular my parents and sister, for their love, encouragements and undying support.
+	
+	\vspace{1.5cm}
+	\begin{flushright}
+		Nicolas Mohnblatt
+	\end{flushright}
 \end{abstract}
