--- a/references.bib
+++ b/references.bib
@@ -33,6 +33,16 @@ year = {2017},
 note = {}
 }
 
+@misc {IntelSGX,
+author = {Intel},
+title = {Take Control of Protecting Your Data},
+howpublished = {\url{https://www.intel.com/content/www/us/en/architecture-and-technology/software-guard-extensions.html}},
+month = {},
+year = {},
+note = {Retrieved online on 9 September 2020}
+}
+
+
 @misc {WhatsApp,
 author = {{WhatsApp Inc.}},
 title = {Terms of {S}ervice},
@@ -71,6 +81,151 @@ month = {05},
 pages = {425-430},
 title = {Where's Wally?: How to Privately Discover your Friends on the Internet},
 doi = {10.1145/3196494.3196496}
+}
+
+@misc{Chase2020,
+    author = {Melissa Chase and Peihan Miao},
+    title = {Private Set Intersection in the Internet Setting From Lightweight Oblivious PRF},
+    howpublished = {Cryptology ePrint Archive, Report 2020/729},
+    year = {2020},
+    note = {\url{https://eprint.iacr.org/2020/729}},
+}
+
+@misc{Chen2017,
+    author = {Hao Chen and Kim Laine and Peter Rindal},
+    title = {Fast Private Set Intersection from Homomorphic Encryption},
+    howpublished = {Cryptology ePrint Archive, Report 2017/299},
+    year = {2017},
+    note = {\url{https://eprint.iacr.org/2017/299}},
+}
+
+
+@misc{Demmler2018,
+    author = {Daniel Demmler and Peter Rindal and Mike Rosulek and Ni Trieu},
+    title = {PIR-PSI: Scaling Private Contact Discovery},
+    howpublished = {Cryptology ePrint Archive, Report 2018/579},
+    year = {2018},
+    note = {\url{https://eprint.iacr.org/2018/579}},
+}
+
+@misc{Kiss2017,
+    author = {\'Agnes Kiss and Jian Liu and Thomas Schneider and N. Asokan and Benny Pinkas},
+    title = {Private Set Intersection for Unequal Set Sizes with Mobile Applications},
+    howpublished = {Cryptology ePrint Archive, Report 2017/670},
+    year = {2017},
+    note = {\url{https://eprint.iacr.org/2017/670}},
+}
+
+
+@article{Bloom1970,
+	author = {Bloom, Burton H.},
+	title = {Space/Time Trade-Offs in Hash Coding with Allowable Errors},
+	year = {1970},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	volume = {13},
+	number = {7},
+	issn = {0001-0782},
+	url = {https://doi.org/10.1145/362686.362692},
+	journal = {Commun. ACM},
+	month = jul,
+	pages = {422--426},
+}
+
+
+@inproceedings{Fan2014,
+	author = {Fan, Bin and Andersen, Dave G. and Kaminsky, Michael and Mitzenmacher, Michael D.},
+	title = {Cuckoo Filter: Practically Better Than Bloom},
+	year = {2014},
+	isbn = {9781450332798},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/2674005.2674994},
+	doi = {10.1145/2674005.2674994},
+	pages = {75--88},
+	series = {CoNEXT '14},
+}
+
+
+@misc {BloomCisc,
+author = {Pei Cao},
+title = {Bloom filters - the math},
+howpublished = {\url{http://pages.cs.wisc.edu/~cao/papers/summary-cache/node8.html}},
+month = {July},
+year = {1998},
+note = {University of Wisconsin-Madison [Online]}
+}
+
+
+@inproceedings {Melara2014,
+author = {Marcela S. Melara and Aaron Blankstein and Joseph Bonneau and Edward W. Felten and Michael J. Freedman},
+title = {{CONIKS}: Bringing Key Transparency to End Users},
+booktitle = {24th {USENIX} Security Symposium ({USENIX} Security 15)},
+year = {2015},
+isbn = {978-1-939133-11-3},
+address = {Washington, D.C.},
+pages = {383--398},
+url = {https://www.usenix.org/conference/usenixsecurity15/technical-sessions/presentation/melara},
+publisher = {{USENIX} Association},
+month = aug,
+}
+
+
+@InProceedings{Shamir1985,
+author={Shamir, Adi},
+editor={Blakley, George Robert
+and Chaum, David},
+title={Identity-Based Cryptosystems and Signature Schemes},
+booktitle={Advances in Cryptology},
+year={1985},
+publisher={Springer Berlin Heidelberg},
+address={Berlin, Heidelberg},
+pages={47--53},
+isbn={978-3-540-39568-3},
+}
+
+@misc{Sakai2000,
+    author = {Ryuichi Sakai and Jun Furukawa},
+    title = {Identity-Based Broadcast Encryption},
+    howpublished = {Cryptology ePrint Archive, Report 2007/217},
+    year = {2007},
+    note = {\url{https://eprint.iacr.org/2007/217}},
+}
+
+@inproceedings {Boneh2001,
+author = {Dan Boneh and Matthew Franklin},
+title = {Identity-Based Encryption from the Weil Pairing},
+booktitle = {Advances in Cryptology --- Crypto 2001},
+year = {2001},
+pages = {586--615}
+}
+
+
+@misc {Freire2014,
+author = {Freire, Eduarda Simoes Veloso},
+title = {Non-Interactive Key Exchange and Key Assignments},
+howpublished = {Ph. D diss. Royal Holloway, University of London},
+month = {},
+year = {2014},
+note = {\url{https://www.isg.rhul.ac.uk/~kp/theses/EFthesis.pdf}}
+}
+
+@InProceedings{Tomida2019,
+author={Tomida, Junichi
+and Fujioka, Atsushi
+and Nagai, Akira
+and Suzuki, Koutarou},
+editor={Sako, Kazue
+and Schneider, Steve
+and Ryan, Peter Y. A.},
+title={Strongly Secure Identity-Based Key Exchange with Single Pairing Operation},
+booktitle={Computer Security -- ESORICS 2019},
+year={2019},
+publisher={Springer International Publishing},
+address={Cham},
+pages={484--503},
+abstract={This paper proposes an id-eCK secure identity-based authenticated key exchange (ID-AKE) scheme, where the id-eCK security implies that a scheme resists against leakage of all combinations of master, static, and ephemeral secret keys except ones trivially break the security. Most existing id-eCK secure ID-AKE schemes require two symmetric pairing operations or a greater number of asymmetric pairing, which is faster than symmetric one, operations to establish a session key. However, our scheme is realized with a single asymmetric pairing operation for each party, and this is an advantage in efficiency.},
+isbn={978-3-030-29962-0}
 }
 
 
@@ -224,4 +379,12 @@ note = {Retrieved online on 5 Sept. 2020}
 	journal = {Science Advances}
 }
 
+
+@misc{Boneh2010,
+    author = {Dan Boneh and Amit Sahai and Brent Waters},
+    title = {Functional Encryption: Definitions and Challenges},
+    howpublished = {Cryptology ePrint Archive, Report 2010/543},
+    year = {2010},
+    note = {\url{https://eprint.iacr.org/2010/543}},
+}
 
