--- a/system.tex
+++ b/system.tex
@@ -1,7 +1,6 @@
 \chapter{Pairing-Based Contact Discovery}
 \label{chap:system}
 
-% TODO redo structure
 \paragraph{} In this chapter we present the architecture for our contact discovery scheme (\autoref{sec:architecture}). We then provide outlines of security proofs (\autoref{sec:security}), theoretical performance evaluations and estimates (\autoref{sec:performance}) and, show how our system maps onto real-world applications such as end-to-end encrypted messaging and mobile-first cryptocurrencies (\autoref{sec:applications}).
 
 
@@ -50,7 +49,7 @@
 			\item $\BTBLS$ is a blind $(t,n)$-threshold BLS signature scheme (see definition \autoref{def:BTBLS}). We denote this scheme's algorithms as $\BTBLS . \Keygen$, $\BTBLS . \Sign$, \textit{etc...} 
 			\item $\SIG$ is a strong existentially unforgeable signature scheme which makes use of the third-party provided user keys $(\sk_A,\pk_A)$ and is composed of algorithms $\SIG . \Sign$ and $\SIG . \Verif$.
 			\item The master secret key is set to an integer $s \in \mathbb{Z}_q$ chosen uniformly at random. We define two corresponding master public keys ${g_0}^s$ and ${g_1}^s$, for which there exists $n$ public shares. We denote the $i$-th shares as ${g_0}^{s_i}$ and ${g_1}^{s_i}$.
-			\item Let $n$ the number of servers ($n=|\mathcal{S}|$)) and $t$ a fixed threshold such that $1 \leq t \leq n$, we assume that the master secret key is shared according to a secure $t$-out-of-$n$ secret sharing scheme and that no single entity holds the master secret key.
+			\item Let $n$ the number of servers ($n=|\mathcal{S}|$)) and $t$ a fixed threshold such that $1 < t \leq n$, we assume that the master secret key is shared according to a secure $t$-out-of-$n$ secret sharing scheme and that no single entity holds the master secret key.
 		\end{itemize}
 
 	\subsection{Key derivation}
@@ -113,15 +112,14 @@
 			\label{eq:usercheck1}
 			\Pair{g_1}{\widehat\sigma_{i,1}} &= \Pair{{g_1}^{s_i}}{H_1(\id_A)^\alpha}
 		\end{align}
-		\item If the checks succeed (in other words, if $A$ receives valid signatures from the service), $A$ removes the blinding factor $\alpha$ to obtain $H_0(\id_A)^{s_i}$ and $H_1(\id_A)^{s_i}$.
+		\item If the checks succeed (in other words, if $A$ receives valid signatures from $S_i$), $A$ removes the blinding factor $\alpha$ to obtain $H_0(\id_A)^{s_i}$ and $H_1(\id_A)^{s_i}$.
 		\end{enumerate}
 		
 	
 	\noindent $A$ repeats the above procedure with at least $t$ servers. Using the obtained signature shares, $A$ can recover the full signatures $H_0(\id_A)^s$ and $H_1(\id_A)^s$ using $\BTBLS.\Combine$ in both variants of the signature scheme.
 	
 	
-	\paragraph{} This completes our description of the contact discovery scheme. We have seen how the setup process allows users to obtain their private constraining keys. Using those keys, users can locally and asynchronously derive shared key material with their contacts by evaluating a left/right constrained PRF at specific points. Finally, using the shared key material, users can leave and read messages from an untrusted online cache, thus completing the contact discovery process.
-
+	\paragraph{} This completes our initial description of the contact discovery scheme. We have seen how the setup process allows users to obtain their private constraining keys. Using those keys, users can locally and asynchronously derive shared key material with their contacts by evaluating a left/right constrained PRF at specific points. Finally, using the shared key material, users can leave and read messages from an untrusted online cache, thus completing the contact discovery process. Notice however that the service does not obtain proof that user $A$ indeed owns $\id_A$. We address this issue and discuss an extension to the setup process in \autoref{sec:impersonation}.
 
 		
 %\fbox{
@@ -142,6 +140,7 @@
 \label{sec:security}
 
 
+
 \paragraph{} We will now evaluate the privacy guarantees of our scheme when there are strictly less than $t$ malicious servers. Our scheme hides the links between users as long as the decisional bilinear Diffie-Hellman assumption holds for the pairing $e$, the master secret key $s$ does not leak and both constraining keys $\keyleft{X}, \keyright{X}$ are known only to user $X$. We present the threat model, potential attacks, outlines of security proofs as well as the consequences of a security breach.
 
 
@@ -160,7 +159,7 @@
 	
 	\subsection{Proof outline}
 	
-	\paragraph{} To guide our analysis, we provide an attack tree\footnote{as defined by Schneier \cite{attacktree}} against the privacy property of our scheme in \autoref{fig:attacktree}. The root node represents the attacker's goal and each child node represents an option to solve the problem indicated in the parent node. Consequently, leaf nodes represent the attacker's entry points: breaking the security of $F$, obtaining the master secret key $s$, forging BLS signatures on another user's discovery identifier, impersonating a user or computing the shared key material $(k_{AB}, f_{AB}, f_{BA})$. We will therefore consider each leaf node and show that our scheme is resistant against these attacks.
+	\paragraph{} To guide our analysis, we provide an attack tree\footnote{as defined by Schneier \cite{attacktree}} against the privacy property of our scheme in \autoref{fig:attacktree}. The root node represents the attacker's goal and each child node represents an option to solve the problem indicated in the parent node. Consequently, leaf nodes represent the attacker's entry points. These are \textit{(i)} breaking the security of $F$, \textit{(ii)} obtaining the master secret key $s$, \textit{(iii)} forging BLS signatures on another user's discovery identifier, \textit{(iv)} impersonating a user or \textit{(v)} computing the shared key material $(k_{AB}, f_{AB}, f_{BA})$. We will therefore consider each leaf node and show that our scheme is resistant against these attacks.
 	
 	
 		\begin{figure}[H]
@@ -200,17 +199,17 @@
 			Thus, $\bdv$ will run $\adv$ as a sub-routine and must therefore emulate its oracles, namely $F.\mathsf{eval}$, $F.\mathsf{constrain}$, $\mathsf{Challenge}$ and oracles for the hash functions $H_0,H_1$. \\
 			
 			When $\adv$ issues a query to $H_0(x)$, $\bdv$ chooses a consistent random $\widehat x \sample \mathbb{Z}_q$ and sets $H_0(x) \leftarrow {g_0}^{\widehat x}$. To one of $\adv$'s queries to $H_0$ which we denote $x^*$, $\bdv$ responds with $H_0(x^*) \leftarrow v_0$. Queries to $H_1$ are answered in a similar fashion where one query is responded to with $H_1(y^*) \leftarrow w_1$. Using these values, queries to $F.\mathsf{constrain}(x,LEFT)$ where $x\neq x^*$ are answered with $k_{x,LEFT} \leftarrow  {u_0}^{\widehat x}$. Notice that as required
-				$$ {u_0}^{\widehat x} = ({g_0}^\alpha)^{\widehat x} = {g_0}^{\alpha \widehat x} = ({g_0}^{\widehat x})^{\alpha} = H_0(x)^\alpha$$
+				$$ {u_0}^{\widehat x} = \left({g_0}^\alpha\right)^{\widehat x} = {g_0}^{\alpha \widehat x} = \left({g_0}^{\widehat x}\right)^{\alpha} = H_0(x)^\alpha$$
 			Similarly, queries to $F.\mathsf{constrain}(y,RIGHT)$ where $y\neq y^*$ are answered with $k_{y,RIGHT} \leftarrow  {u_1}^{\widehat y}$. Queries to $F.\mathsf{eval}(x,y)$ are answered for $x \neq x^*$ and $y \neq y^*$ by building a constraining keys as it is done for the $F.\mathsf{constrain}$ oracle. Notice that $\bdv$ does not hold the values $\beta,\gamma$ and is therefore unable to answer queries to the $F.\mathsf{constrain}$ oracle for $(x^*, LEFT)$ and $(y^*, RIGHT)$, nor can it answer the $F.\mathsf{eval}$ query for $(x^*,y^*)$. This is in fact equivalent to starting Attack Game \autoref{att:lrPRF} with the set $C$ initialised to $\{(x^*,y^*)\}$. \\
 			
 			After $n$ queries to the $H_0$ oracle and $m$ queries to the $H_1$ oracle, $\adv$ will hold at most $n \times m$ pairs on which it could challenge.	 Some of these pairs may have been added to the set $V$ due to queries to $F.\mathsf{constrain}$ and $F.\mathsf{eval}$, and thus become ineligible for challenging. However, since the experiment started with $C = \{(x^*,y^*)\}$, we can be sure that $(x^*,y^*)$ is an eligible pair (remember that the attack game maintains the invariant $C \cap V = \emptyset$). Therefore, $\adv$ will challenge the pair $(x^*,y^*)$ with probability $p \geq \frac{1}{n\times m}$, to which $\bdv$ answers with $\Smallz{b}$. 
 			
-			If $b=0$, then $\Smallz{b} = F(\gamma, (x^*, y^*))$ and $\adv$ will answer as in experiment EXP(0). On the other hand if $b=1$, then $\Smallz{b} = {g_T}^{\delta}$ and $\adv$ will answer as in experiment EXP(1). Let $b'_\adv$ be the output of $\adv$, we define as $b'_\bdv \leftarrow b'_\adv$ the return value of $\bdv$. Thus
+			If $b=0$, then $\Smallz{b} = F(\alpha, (x^*, y^*))$ and $\adv$ will answer as in experiment EXP(0). On the other hand if $b=1$, then $\Smallz{b} = {g_T}^{\delta}$ and $\adv$ will answer as in experiment EXP(1). Let $b'_\adv$ be the output of $\adv$, we define as $b'_\bdv \leftarrow b'_\adv$ the return value of $\bdv$. Thus
 			\begin{equation}
 				\Pr[b'_\bdv = b] \geq \frac{1}{n \times m} \times \Pr[b'_\adv = b]
 			\end{equation}
 			
-			Given that $\adv$ is a probabilistic polynomial-time adversary, $n \times m$ must necessarily be polynomial in $\lambda$. Therefore, if $\adv$'s advantage is non-negligible then so is $\bdv$'s, thus breaking the DBDH assumption and yielding a contradiction.
+			Given that $\adv$ is a probabilistic polynomial-time adversary, $n \times m$ must necessarily be polynomial in $\lambda$. Therefore, if $\adv$'s advantage is non-negligible then so is $\bdv$'s, thus breaking the DBDH assumption and yielding a contradiction. We therefore show that an adversary such as $\adv$ cannot exist under the DBDH assumption and when $H_0,H_1$ are modelled as random oracles.
 		\end{proof}
 		
 \subsubsection{Computing $A$ and $B$'s shared key material}
@@ -233,7 +232,7 @@
 
 \paragraph{} The first solution is for $A$ to transmit her discovery identifier in clear to $S_i$. The server can then use out-of-bound communication to verify that $A$ indeed owns $\id_A$ (possible techniques include sending a one-time code via text message or email). If $A$ proves that she owns $\id_A$, $S_i$ provides the partial signatures for that discovery identifier. Notice that under this approach, $A$ cannot blind the hash of her discovery identifier. Consequently, the communication between $A$ and $S_i$ must be encrypted to prevent an eavesdropping adversary from learning the signature share on $\id_A$. Furthermore, this identification method allows the servers to build a list of identifiers for the users registered to the mobile application. In some cases, this may be a breach of privacy.
 
-\paragraph{} The second solution makes use of identification tokens to delegate the task of linking a user to their discovery identifier. Suppose an entity $V$ (centralised or distributed) is trusted to verify whether a user owns a discovery identifier. Using a secret key $v \sample \mathbb{Z}_q$ and the corresponding public keys ${g_0}^v$ and ${g_1}^v $, $V$ could issue ownership tokens in the form of BLS signatures $t_{0,A}= H_0(\id_A)^v, t_{1,A}=H_1(\id_A)^v$. These tokens can then be blinded and verified against a blinded discovery identifier $H_0(\id_A)^\alpha, H_1(\id_A)^\alpha$:
+\paragraph{} The second solution makes use of identification tokens to delegate the task of linking a user to their discovery identifier. Suppose an entity $V$ (centralised or distributed) is trusted to verify whether a user owns a discovery identifier. Using a secret key $v \sample \mathbb{Z}_q$ and the corresponding public keys ${g_0}^v$ and ${g_1}^v $, $V$ could issue ownership tokens in the form of BLS signatures $t_{0,A}= H_0(\id_A)^v$ and $t_{1,A}=H_1(\id_A)^v$. These tokens can then be blinded and verified against a blinded discovery identifier $H_0(\id_A)^\alpha, H_1(\id_A)^\alpha$:
 \begin{align}
 	\label{eq:token0}
 	\Pair{{t_{0,A}}^\alpha}{g_1} = \Pair{H_0(\id_A)^\alpha}{{g_1}^v} &\iff t_{0,A} = H_0(\id_A)^v \\
@@ -241,21 +240,22 @@
 	\Pair{g_0}{{t_{1,A}}^\alpha} = \Pair{{g_0}^v}{H_1(\id_A)^\alpha} &\iff t_{1,A} = H_1(\id_A)^v
 \end{align}
 
-\noindent Users can therefore send ${t_{0,A}}^\alpha$, ${t_{1,A}}^\alpha$ along with the setup tuple $(\acc_A$, $\mathbf{sig}_A$, $H_0(\id_A)^\alpha$, $H_1(\id_A)^\alpha)$, to allow each server to perform the checks in \autoref{eq:token0} and \autoref{eq:token1}. 
+\noindent Users can therefore send ${t_{0,A}}^\alpha$, ${t_{1,A}}^\alpha$ along with the setup tuple $(\acc_A$, $\mathbf{sig}_A$, $H_0(\id_A)^\alpha$, $H_1(\id_A)^\alpha)$, to allow each server to perform the checks in \autoref{eq:token0} and \autoref{eq:token1} during Step 3 of the Setup protocol.
 
-\paragraph{} While this method allows identification without revealing the discovery identifier to the contact discovery servers, it relies on a trusted verification entity $V$. In fact, this entity faces the same problem we were trying to avoid: it must output a BLS signature on an identifier only if the request was made by the identifier's owner. This raises the question of trust within our system. The contact discovery scheme can be made secure and oblivious to which user owns which discovery identifier. However, for that to happen, we need another entity to perform that check and gather private information about the users.
+\paragraph{} While this method allows identification without revealing the discovery identifier to the contact discovery servers, it relies on a trusted verification entity $V$. In fact, this entity faces the same problem we were trying to avoid: it must output a BLS signature on an identifier only if the request was made by the identifier's owner. This raises the question of trust within our system. The contact discovery scheme can be made secure while remaining oblivious to discovery identifier ownership. However, achieving this property requires the existence of another entity that checks for identifier ownership.
 
 	\subsection{Consequences of a breach}
 	
-	\paragraph{} To conclude our investigation of the scheme's privacy properties, we evaluate the consequences of various breaches of the protocol. Let us first consider the scenario in which a pair of constraining keys $\keyleft{\id_A}, \keyright{\id_A}$ is leaked. Using these keys, an attacker will be able to compute the shared key material $(k_{AX}, f_{AX}, f_{BX})$ between $A$ and any other user $X$. The attacker is then able to:
+	\paragraph{} To conclude our investigation of the scheme's privacy properties, we evaluate the consequences of various breaches of the protocol. Let us first consider the scenario in which a pair of constraining keys $\keyleft{\id_A}, \keyright{\id_A}$ is leaked. Using these keys, an attacker will be able to compute the shared key material $(k_{AX}, f_{AX}, f_{XA})$ between $A$ and any other user $X$. The attacker is then able to:
 	\begin{enumerate}[label=(\alph*)]
 		\item check whether $X$ has written to the cache in location $H(f_{XA})$, thus uncovering whether $\id_A \in \contacts{X}$. Iterating over all $\id_X \in \mathcal{ID}$ allows to determine which users hold $\id_A$ in their contacts. 
 		\item decrypt the message (if any) left by $X$ at location $H(f_{XA})$ using the key $k_{AX}$, thus linking $\id_X$ to an address and public key.
 		\item check whether $A$ has written to the cache in location $H(f_{AX})$, thus uncovering whether $\id_X \in \contacts{A}$. Iterating over all $\id_X \in \mathcal{ID}$ allows to recover all of $A$'s contacts.
-		\item overwrite the value that $A$ wrote in location $H(f_{AX})$ using the key $k_{AX}$. This allows the attacker to send any address and public key to $X$, thus hijacking any channel that $A$ and $X$ were wishing to establish.
+		\item overwrite the value that $A$ wrote in location $H(f_{AX})$ using the key $k_{AX}$. This allows the attacker to send any address and public key to $X$, thus hijacking any channel that $A$ and $X$ were hoping to establish.
 	\end{enumerate}
 	
 	\paragraph{} Should only one of the constraining keys leak, the attacker will only be able to perform a subset of the actions above. Indeed, obtaining a $LEFT$ key only allows to compute $f_{AX}$. The attacker will therefore only be able to perform action (c). Similarly, obtaining only a $RIGHT$ key limits the attacker's possibilities to (a). In either case, these breaches represent a complete loss of privacy. Finally, obtaining the master secret key allows to compute any constraining key, thus allowing to perform the above operations for any pair of users.
+
 
 
 \section{Performance evaluation and estimates}
@@ -263,19 +263,17 @@
 
 
 
-	\paragraph{} In this section we present a brief evaluation of the scheme's efficiency. Importantly, we show that all computational costs grow linearly with respect to the input size. We estimate the computation time associated with each phase of our discovery scheme using benchmark timings from the elliptic curve pairing library MCL \cite{MCLLib} (see calculations in \autoref{app:perf}). These benchmark tests were performed on an iPhone 7 running iOS 11.2.1 (\autoref{table:benchmarks}) and an Intel Core i7 processor (3.6GHz) running Linux (\autoref{table:benchmarks_server}), executing operations over three Barreto-Naehrig (BN) elliptic curves with varying security parameters \cite{MCLBench}.  Notice that we are now working with elliptic curves and therefore adopt an additive notation for the group operation.
-	
+	\paragraph{} In this section we present a brief evaluation of the scheme's efficiency. Importantly, we show that all computational costs grow linearly with respect to their respective inputs. We estimate the computation time associated with each phase of our discovery scheme using benchmark timings from the elliptic curve pairing library MCL \cite{MCLLib} (see calculations in \autoref{app:perf}). These benchmark tests were performed on an iPhone 7 running iOS 11.2.1 (\autoref{table:benchmarks}) and an Intel Core i7 processor (3.6GHz) running Linux (\autoref{table:benchmarks_server}), executing operations over three Barreto-Naehrig (BN) elliptic curves with varying security parameters \cite{MCLBench}.  Notice that we are now working with elliptic curves and therefore adopt an additive notation for the group operation.
 	\input{tables/pairing_benchmarks}
-	
 	\input{tables/pairing_benchmarks_server}
 	
 	\subsubsection{Computational cost: Setup with identification tokens}
 	
-	\paragraph{} First, let us inspect the setup phase with identification tokens. This phase only needs to be performed once per user and per server. As such we will evaluate the computational cost of a single user-server interaction, then consider the scaling with respect to the total number of users $N$ and the threshold of servers $t$. We assume that users already hold a hash of their own discovery identifier. By inspection of the protocol, the setup phase requires: 
+	\paragraph{} First, let us inspect the setup phase with identification tokens. This phase only needs to be performed once per user and per server. As such we will evaluate the computational cost of a single user-server interaction, then consider scaling with respect to the total number of users $N$ and the threshold of servers $t$. We assume that users already hold a hash of their own discovery identifier. By inspection of the protocol, the setup phase requires: 
 	\begin{quote}
 		\textbf{User:} 2 multiplications in $\Gzero$, 2 multiplications in $\Gone$ (blind and unblind identifier), 4 pairing operations (\autoref{eq:usercheck0}, \autoref{eq:usercheck1}), one standard digital signature. Identification tokens introduce one additional multiplication in $\Gzero$, and one multiplication in $\Gone$ (blind tokens). After repeating these operations with enough servers to meet the system's threshold, a user is required to recombine $t$ partial BLS signatures in both $\Gzero$ and $\Gone$. Using Lagrange interpolation, each of these recombinations require $t$ multiplications and $t$ additions in their respective source group. We can now express the time spent by each user on computations for the setup phase as a function of $t$:
 		\begin{equation}
-			\mathrm{comp}_{\mathrm{setup, user}}(t) = t(4(\mathbf{mul}_{\Gzero} + \mathbf{mul}_{\Gone} + \mathbf{p}) + \mathbf{add}_{\Gzero} + \mathbf{add}_{\Gzero} + \mathbf{dsa}_S)
+			\mathrm{comp}_{\mathrm{setup, user}}(t) = t(4(\mathbf{mul}_{\Gzero} + \mathbf{mul}_{\Gone} + \mathbf{p}) + \mathbf{add}_{\Gzero} + \mathbf{add}_{\Gone} + \mathbf{dsa}_S)
 		\end{equation}
 		\noindent where $\mathbf{dsa}_S$ is the time to execute the digital signature algorithm on a mobile device.
 		
@@ -293,27 +291,28 @@
 		\mathrm{comp}_{\mathrm{setup, server}}(N) &= 36.98\times N &\mathrm{ms}
 	\end{alignat}
 	
-	\noindent For a threshold of servers arbitrarily set to $6$, a single user can complete the setup phase while spending less than 0.5 seconds performing local computations. Similarly, each server can setup a new user within tens of milliseconds. Launching our discovery service for an application with 10 million users can be done with slightly more 4 days of serial computations on a single Inter Core i7 processor. However, with no optimisations, an application with one billion users would require a roll out period of more than one year (approximately 1.2 years).
+	\noindent For a threshold of servers arbitrarily set to $6$, a single user can complete the setup phase while spending less than 0.5 seconds performing local computations. Similarly, each server can setup a new user within 37 milliseconds. Launching our discovery service for an application with 10 million users can be done with slightly more 4 days of serial computations on a single Inter Core i7 processor. However, with no optimisations, an application with one billion users would require a bootstrapping period of more than one year (approximately 1.2 years).
 	
-	\paragraph{} In order to render the service practical for widely used applications, we must investigate methods to optimise the server-side setup process. Firstly, processing computations in parallel on multiple, faster processors can reduce the roll out period by a large constant factor. Secondly, we can optimise the cryptographic checks. Indeed, the most costly operations performed by each server are the verifications of the identity tokens. These are in fact verification of BLS signatures, which can be aggregated to reduce the number of pairing operations needed \cite{BLSagg}. 
+	\paragraph{} In order to render the service practical for widely used applications, we must investigate methods to optimise the server-side setup process. Firstly, processing computations in parallel on multiple, faster processors can reduce the roll out period by a large constant factor. Secondly, we can optimise the cryptographic checks. Indeed, the most costly operations performed by each server are the verifications of the identity tokens (\autoref{eq:token0}, \autoref{eq:token1}). These are in fact verification of BLS signatures, which can be aggregated to reduce the number of pairing operations needed \cite{BLSagg}. 
 	
-	\paragraph{} Identification token aggregation for the BLS scheme with signatures in $\Gzero$ is defined as follows (an equivalent process can be performed for tokens in $\Gone$). For a group of $u$ users  we denote each individual user with the subscript $j$. We momentarily revert to a multiplicative notation for group operations. Let $\widehat \id_j \in \mathbb{Z}_q$ such that $H_0(\id_j) = {g_0}^{\widehat\id_j}$, $\alpha_j$ denote the $j$-th user's blinding factor and $t_j = H_0(\id_j)^v$ denote the $j$-th user's identification token. We aggregate the blinded identification tokens by performing:
+	\paragraph{} Identification token aggregation for the BLS scheme with signatures in $\Gzero$ is defined as follows (an equivalent process can be performed for tokens in $\Gone$). For a group of $U$ users  we denote each individual user with the subscript $j$. We momentarily revert to a multiplicative notation for group operations. Let $\widehat \id_j \in \mathbb{Z}_q$ such that $H_0(\id_j) = {g_0}^{\widehat\id_j}$, $\alpha_j$ denote the $j$-th user's blinding factor and $t_j = H_0(\id_j)^v$ denote the $j$-th user's identification token. We aggregate the blinded identification tokens by performing:
 	\begin{equation}
-		t_{agg,0} = \prod_{j=1}^{u} {t_j}^{\alpha_j} = \prod_{j=1}^{u} \left(H_0(\id_j)^v\right)^{\alpha_j} =  \prod_{j=1}^{u} \left(\left({g_0}^{\widehat\id_j}\right)^v\right)^{\alpha_j} = {g_0}^{v\sum_{j = 1}^u \widehat\id_j{\alpha_j}} = \left({g_0}^{\sum_{j = 1}^u \widehat\id_j{\alpha_j}}\right)^v
+		t_{agg,0} = \prod_{j=1}^{U} {t_j}^{\alpha_j} = \prod_{j=1}^{U} \left(H_0(\id_j)^v\right)^{\alpha_j} =  \prod_{j=1}^{U} \left(\left({g_0}^{\widehat\id_j}\right)^v\right)^{\alpha_j} = {g_0}^{v\sum_{j = 1}^U \widehat\id_j{\alpha_j}} = \left({g_0}^{\sum_{j = 1}^U \widehat\id_j{\alpha_j}}\right)^v
 	\end{equation}
 	
 	\noindent Similarly, we aggregate the blinded hashed identifiers:
 	\begin{equation}
-		h_{agg,0} = \prod_{j=1}^{u} {H_0(\id_j)}^{\alpha_j} = \prod_{j=1}^{u} \left({g_0}^{\widehat\id_j}\right)^{\alpha_j} = {g_0}^{\sum_{j = 1}^u \widehat\id_j\alpha_j}
+		h_{agg,0} = \prod_{j=1}^{U} {H_0(\id_j)}^{\alpha_j} = \prod_{j=1}^{U} \left({g_0}^{\widehat\id_j}\right)^{\alpha_j} = {g_0}^{\sum_{j = 1}^U \widehat\id_j\alpha_j}
 	\end{equation}
 	
-	\noindent Notice that $t_{agg}, h_{agg} \in \Gzero$ and $t_{agg,0} = {h_{agg,0}}^v$. Therefore, we can treat these aggregated values as a single hashed identifier and its corresponding identification token which can be verified using \autoref{eq:token0}. The aggregated token will verify if and only if every token that composes it is correctly formed. When all $u$ tokens are correctly formed, we replace $u$ pairing operations by $u$ group operations in $\Gzero$ and a single pairing. However if as little as one token is malformed, the entire verification fails, thus incurring computational waste.
+	\noindent Notice that $t_{agg,0}, h_{agg,0} \in \Gzero$ and $t_{agg,0} = {h_{agg,0}}^v$. Therefore, we can treat these aggregated values as a single hashed identifier and its corresponding identification token which can be verified using \autoref{eq:token0}. The aggregated token will verify if every token that composes it is correctly formed. When all $U$ tokens are correctly formed, we replace $U$ pairing operations by $U$ group operations in $\Gzero$ and a single pairing. However if as little as one token is malformed, the entire verification fails, thus incurring computational waste.
 	
-	\paragraph{} We can establish optimal batching strategies by placing assumptions on the rate of malformed tokens; however, such strategies are outside the scope of this report. Promising approaches to establishing an optimal strategy may come from other fields of research \cite{covid}. 
+	
+	\paragraph{} We can establish optimal batching strategies by placing assumptions on the rate of malformed tokens; however, such strategies are outside the scope of this report. Promising approaches to establishing an optimal strategy may come from other fields of research \cite{covid}. We must also warn that this aggregation method may have security implications. An attacker could manipulate their token in a manner similar to a rogue key attack or to perform a denial-of-service attack. Further investigation would be required before safely implementing this optimisation.
 	
 	\subsubsection{Computational cost: Shared key derivation}
 	
-	\paragraph{} We now consider the local key derivation phase on a per-contact basis, before investigating how computations scale with the number of contacts $N_c$. A user must perform two evaluations of a left/right constrained PRF. Under our construction, this amounts to performing one hash to each source group and two pairing operations. Thus:
+	\paragraph{} We now consider the local key derivation phase on a per-contact basis before investigating how computations scale with the number of contacts $N_c$. A user must perform two evaluations of a left/right constrained PRF. Under our construction, this amounts to performing one hash to each source group and two pairing operations. Thus:
 	\begin{equation}
 		\mathrm{comp}_{\mathrm{key, user}}(N_c) = N_c(2\mathbf{p} + \mathbf{hash}_{\Gzero} + \mathbf{hash}_{\Gone})
 	\end{equation}
